# xtx4-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  MANUAL_TEST.md  README.md
crates/sd-storage/: Cargo.toml  README.md
crates/sd-storage/src/: lib.rs
crates/ssd1677/: Cargo.toml  README.md
crates/ssd1677-esp/: Cargo.toml  README.md
crates/ssd1677-esp/src/: lib.rs
crates/ssd1677-minifb/: Cargo.toml  README.md
crates/ssd1677-minifb/src/: lib.rs
crates/ssd1677-pbm/: Cargo.toml  README.md
crates/ssd1677-pbm/src/: lib.rs
crates/ssd1677/src/: display_interface.rs  lib.rs  lut.rs  ssd1677.rs
crates/xtx4-bus/: Cargo.toml  README.md
crates/xtx4-bus/src/: lib.rs
crates/xtx4-buttons/: Cargo.toml  README.md
crates/xtx4-buttons-adc/: Cargo.toml  README.md
crates/xtx4-buttons-adc/src/: intr.rs  lib.rs  polling.rs
crates/xtx4-buttons-background/: Cargo.toml
crates/xtx4-buttons-background/src/: lib.rs
crates/xtx4-buttons-minifb/: Cargo.toml  README.md
crates/xtx4-buttons-minifb/src/: lib.rs
crates/xtx4-buttons-mock/: Cargo.toml  README.md
crates/xtx4-buttons-mock/src/: lib.rs
crates/xtx4-buttons-stdin/: Cargo.toml  README.md
crates/xtx4-buttons/src/: lib.rs
crates/xtx4-desktop/: Cargo.toml  README.md
crates/xtx4-desktop/src/: lib.rs
crates/xtx4-display/: Cargo.toml  README.md
crates/xtx4-esp32/: Cargo.toml  README.md
crates/xtx4-esp32/src/: lib.rs
crates/xtx4-host/: Cargo.toml  README.md
crates/xtx4-host-emulated/: Cargo.toml  README.md
crates/xtx4-host-emulated/src/: lib.rs
crates/xtx4-host-esp/: Cargo.toml  README.md
crates/xtx4-host-esp/src/: lib.rs
crates/xtx4-platform/: Cargo.toml  README.md
crates/xtx4-platform-interface/: Cargo.toml  README.md
crates/xtx4-platform-interface/src/: lib.rs
crates/xtx4-platform/src/: lib.rs  platform.rs
crates/xtx4-platform/tests/: regression.rs
crates/xtx4-platform/tests/golden/: frame_0001.pbm  frame_0005.pbm  frame_0006.pbm  frame_0012.pbm  frame_0014.pbm  frame_0016.pbm  frame_0018.pbm  frame_0020.pbm  frame_0022.pbm  frame_0023.pbm  frame_0024.pbm  frame_0025.pbm  frame_0026.pbm  frame_0027.pbm  frame_0028.pbm  frame_0029.pbm  frame_0030.pbm  frame_0031.pbm  frame_0032.pbm  frame_0033.pbm  frame_0034.pbm  frame_0035.pbm  frame_0036.pbm  frame_0037.pbm  frame_0038.pbm  frame_0039.pbm  frame_0040.pbm  frame_0041.pbm  frame_0042.pbm  frame_0043.pbm  frame_0044.pbm  frame_0045.pbm  frame_0046.pbm  frame_0047.pbm  frame_0048.pbm  frame_0049.pbm  frame_0050.pbm  frame_0051.pbm  frame_0052.pbm  frame_0053.pbm  (+76 more)
crates/xtx4-raw-gpio/: Cargo.toml
crates/xtx4-raw-gpio/src/: lib.rs
crates/xtx4-sample/: Cargo.toml  README.md
crates/xtx4-sample/src/: main.rs
crates/xtx4-storage/: Cargo.toml  README.md
crates/xtx4-storage/src/: lib.rs
ssd1677/: Cargo.toml
ssd1677-esp/: Cargo.toml
ssd1677-minifb/: Cargo.toml
ssd1677-pbm/: Cargo.toml
ssd1677/src/: controller.rs  display.rs  display_interface.rs  esp_interface.rs  lib.rs  minifb_interface.rs  mock_transport.rs  pbm_interface.rs  ssd1677.rs
xtx4_buttons/: Cargo.toml
xtx4_buttons/src/: buttons_adc.rs  buttons_minifb.rs  buttons_mock.rs  buttons_stdin.rs  lib.rs
xtx4_buttons_adc/: Cargo.toml
xtx4_buttons_minifb/: Cargo.toml
xtx4_buttons_minifb/src/: lib.rs
xtx4_buttons_mock/: Cargo.toml
xtx4_buttons_stdin/: Cargo.toml
xtx4_buttons_stdin/src/: lib.rs
xtx4_desktop/: Cargo.toml
xtx4_desktop/src/: lib.rs
xtx4_display/: Cargo.toml
xtx4_display/src/: lib.rs
xtx4_emulated/: Cargo.toml  test_mock  test_mock.rs
xtx4_emulated/src/: lib.rs
xtx4_esp32/: Cargo.toml
xtx4_esp32/src/: buttons.rs  display.rs  display_transport.rs  emulated.rs  esp_transport.rs  lib.rs  mock_transport.rs  rectangle.rs  sleep.rs  ssd1677.rs
xtx4_host/: Cargo.toml
xtx4_host/src/: host_emulated.rs  host_esp.rs  lib.rs
xtx4_host_emulated/: Cargo.toml
xtx4_host_esp/: Cargo.toml
xtx4_platform/: Cargo.toml
xtx4_platform/src/: canvas.rs  canvas_split.rs  input.rs  lib.rs  platform.rs  rect_split.rs
xtx4_platform/tests/: regression.rs
xtx4_platform/tests/golden/: frame_0003.pbm  frame_0006.pbm  frame_0008.pbm  frame_0010.pbm  frame_0012.pbm  frame_0016.pbm
xtx4_platform_interface/: Cargo.toml
xtx4_platform_interface/src/: lib.rs
xtx4_sample/: Cargo.toml
xtx4_sample/src/: main.rs
