[package]
name = "xtx4_buttons_adc"
version = "0.1.0"
edition = "2021"

[dependencies]
xtx4_buttons = { path = "../xtx4_buttons" }
xtx4_platform_interface = { path = "../xtx4_platform_interface" }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
nb = "1"
xtx4_host = { path = "../xtx4_host" }
