[package]
name = "xtx4_esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
ssd1677 = { path = "../ssd1677" }
xtx4_platform_interface = { path = "../xtx4_platform_interface" }
bitflags = "2"

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
nb = "1"
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.12", features = ["esp32c3"] }
esp-backtrace = { version = "0.14", features = ["esp32c3", "panic-handler", "println"] }