[package]
name = "xtx4_platform"
version = "0.1.0"
edition = "2021"

[features]
desktop = ["dep:xtx4_desktop"]
esp32 = ["dep:xtx4_esp32"]
mock = ["dep:xtx4_esp32"]
minifb = ["dep:xtx4_esp32", "dep:minifb"]

[dependencies]
xtx4_platform_interface = { path = "../xtx4_platform_interface" }
xtx4_host = { path = "../xtx4_host" }
xtx4_esp32 = { path = "../xtx4_esp32", optional = true }
ssd1677 = { path = "../ssd1677" }
xtx4_display = { path = "../xtx4_display" }
xtx4_buttons = { path = "../xtx4_buttons" }
xtx4_desktop = { path = "../xtx4_desktop", optional = true }
minifb = { version = "0.27", optional = true, features = ["x11"] }
embedded-graphics = "0.8"
