[package]
name = "xtx4_platform"
version = "0.1.0"
edition = "2021"

[features]
desktop = ["dep:xtx4_desktop"]
esp32 = ["dep:xtx4_esp32"]
mock = ["dep:xtx4_esp32", "dep:ssd1677-pbm", "dep:xtx4_buttons_mock"]
minifb = ["dep:xtx4_esp32", "dep:minifb", "dep:ssd1677-minifb", "dep:xtx4_buttons_minifb"]

[dependencies]
xtx4_platform_interface = { path = "../xtx4_platform_interface" }
xtx4_host = { path = "../xtx4_host" }
xtx4_esp32 = { path = "../xtx4_esp32", optional = true }
ssd1677 = { path = "../ssd1677" }
ssd1677-pbm = { path = "../ssd1677-pbm", optional = true }
xtx4_display = { path = "../xtx4_display" }
xtx4_buttons = { path = "../xtx4_buttons" }
xtx4_desktop = { path = "../xtx4_desktop", optional = true }
minifb = { version = "0.27", optional = true, features = ["x11"] }
ssd1677-minifb = { path = "../ssd1677-minifb", optional = true }
xtx4_buttons_mock = { path = "../xtx4_buttons_mock", optional = true }
xtx4_buttons_minifb = { path = "../xtx4_buttons_minifb", optional = true }
embedded-graphics = "0.8"
