[package]
name = "sd-storage"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"] }
embedded-hal = "1"
embedded-hal-bus = "0.3"
embedded-sdmmc = "0.9"
xtx4-bus = { path = "../xtx4-bus" }
xtx4-raw-gpio = { path = "../xtx4-raw-gpio" }
