[package]
name = "ssd1677-esp"
version = "0.1.0"
edition = "2021"

[dependencies]
ssd1677 = { path = "../ssd1677" }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
xtx4-platform-interface = { path = "../xtx4-platform-interface" }
xtx4-host = { path = "../xtx4-host" }
esp-println = { version = "0.12", features = ["esp32c3"] }
