[package]
name = "ssd1677"
version = "0.1.0"
edition = "2021"

[dependencies]
xtx4-display = { path = "../xtx4-display" }
xtx4-platform-interface = { path = "../xtx4-platform-interface" }
xtx4-host = { path = "../xtx4-host" }
bitflags = "2"

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
esp-println = { version = "0.12", features = ["esp32c3"] }
