[package]
name = "xtx4-buttons-adc"
version = "0.1.0"
edition = "2021"

[dependencies]
xtx4-buttons = { path = "../xtx4-buttons" }
xtx4-platform-interface = { path = "../xtx4-platform-interface" }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
nb = "1"
xtx4-host = { path = "../xtx4-host" }
